feature(components school): add components card day and fix icon, card

--- a/src/app/components/app-card/app-card.component.html
+++ b/src/app/components/app-card/app-card.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-    <app-icon></app-icon>
+    <app-icon srcimage="../../../assets/icon/japan.png"></app-icon>
     <p>Japan Culture</p>
 </div>
