--- a/src/app/components/app-card/app-card.component.scss
+++ b/src/app/components/app-card/app-card.component.scss
@@ -1,16 +1,17 @@
 .container {
-    background-color: #5CAA9A;
+    background-color: #62D2B3;
     border-radius: 17px;
-    width: 130px;
+    width: 140px;
     height: 170px;
     display: flex;
-    padding: 0 7px;
+    padding: 17px 17px;
     flex-direction: column;
     justify-content: space-around;
 
     & p {
         font-family: 'Roboto', sans-serif;
-        font-size: 18px;
+        font-size: 21px;
+        font-weight: bold;
         color: white;
         width: 50%;
     }
