feature(components): adicionando components e ajustando os existentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-card-day>
-</app-card-day>
-<!-- <app-card></app-card> -->
+<!-- <app-card-day>
+</app-card-day> -->
+<!-- <app-card-task title="Japan Culture" urlimageicon ="../../../assets/icon/japan.png" ></app-card-task> -->
+<!-- <app-card>
+</app-card> -->
+
+<app-classes></app-classes>
