--- a/src/app/components/app-card-day/app-card-day.component.html
+++ b/src/app/components/app-card-day/app-card-day.component.html
@@ -1,11 +1,16 @@
-<div class="container">
-    <app-icon srcimage = "../../../assets/icon/smiling-face.png"></app-icon>
-    <div class="info-days">
-        <p class="day">
-            68
-        </p>
-        <p class="discription-day">
-            Days to holiday
-        </p>
-    </div>
-</div>
+
+<section>
+    <app-card>
+        <div class="app-card__container">
+            <app-icon class="icone" srcimage="../../../assets/icon/smiling-face.png"></app-icon>
+            <div class="info-days">
+                <p class="day">
+                    68
+                </p>
+                <p class="discription-day">
+                    Days to holiday
+                </p>
+            </div>
+        </div>
+    </app-card>
+</section>
