--- a/src/app/components/app-card-day/app-card-day.component.scss
+++ b/src/app/components/app-card-day/app-card-day.component.scss
@@ -1,15 +1,15 @@
 *{
     margin: 0;
 }
-.container {
+section {
     width: 194px;
-    height: 139px;
-    border-radius: 17px;
-    padding: 17px 17px;
+    height: 170px;
+   
+}
+.app-card__container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    font-family: 'Roboto', sans-serif;
     
     & .day {
         font-weight: bold;
@@ -21,6 +21,6 @@
         color: #D2D2D2;
     }
 }
-.container :nth-child(1) {
+.icone {
     align-self: flex-end;  
 }
