--- a/src/app/components/app-card/app-card.component.html
+++ b/src/app/components/app-card/app-card.component.html
@@ -1,4 +1,1 @@
-<div class="container">
-    <app-icon srcimage="../../../assets/icon/japan.png"></app-icon>
-    <p>Japan Culture</p>
-</div>
+<div class="container"></div>
