--- a/src/app/components/app-card/app-card.component.scss
+++ b/src/app/components/app-card/app-card.component.scss
@@ -1,23 +1,8 @@
 .container {
-    background-color: #62D2B3;
+    background-color: white;
+    width: 100%;
+    height: 100%;
     border-radius: 17px;
-    width: 140px;
-    height: 170px;
-    display: flex;
+    box-shadow: 0px 1px 0 3px #EFF1F2 ;
     padding: 17px 17px;
-    flex-direction: column;
-    justify-content: space-around;
-
-    & p {
-        font-family: 'Roboto', sans-serif;
-        font-size: 21px;
-        font-weight: bold;
-        color: white;
-        width: 50%;
-    }
-    
-}
-
-.container :nth-child(1) {
-    align-self: flex-end;  
 }
