--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    background-color: #F5F7FB;
+    
+    font-family: 'Roboto', sans-serif;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.title {
+    font-weight: bold;
+    font-size: 24px;
+    color: #3C444E;
+    margin-bottom: 9px;
+}
+
+.subtitle {
+    font-size: 14px;
+    color: #9e9ea7;
+}
