--- a/src/app/components/app-classes/app-classes.component.html
+++ b/src/app/components/app-classes/app-classes.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="app-classe__cards" >
                 <div *ngFor=" let task of taskscards">
-                    <app-card-task title="{{ task.title }}" urlimageicon ="{{ task.urlImagem }}" ></app-card-task>
+                    <app-card-task title="{{ task.title }}" urlimageicon ="{{ task.urlImagem }}" typecolor="{{ task.typeColorCard }}" ></app-card-task>
                 </div>
                 
             </div>
