--- a/src/app/components/app-card-task/app-card-task.component.html
+++ b/src/app/components/app-card-task/app-card-task.component.html
@@ -1,4 +1,9 @@
-<div class="container">
+<div class="container" 
+[ngClass]="{
+    'green': typecolor === 'green',
+    'rose' : typecolor === 'rose',
+    'blue' : typecolor === 'blue' 
+}">
     <app-icon [srcimage]="urlimageicon"></app-icon>
     <p> {{ title }}</p>
 </div>
